test/spec_vectors/load/fail/module_41.wat
(module (memory 1) (func (result f64) (f64.load (f32.const 0))))